# DeepSpec

./: .dockerignore  .env.example  .gitattributes  .gitignore  DSPARK_QWEN3_4B.md  Dockerfile  README.md  eval.py  requirements.txt
config/dspark/: dspark_ornith_9b.py  dspark_qwen3_4b_trial.py
deepspec/trainer/: __init__.py  base_trainer.py  ckpt_manager.py  dspark_trainer.py
deepspec/utils/: muon.py  optim.py
deepspec_mlx/: ARCHITECTURE.md  README.md  STATUS.md  __init__.py  pyproject.toml  requirements.txt
deepspec_mlx/data/: __init__.py  cache_format.py  cache_reader.py  cache_writer.py
deepspec_mlx/eval/: __init__.py  spec_decode.py
deepspec_mlx/modeling/: __init__.py  config.py  dspark_common.py  dspark_qwen3.py  loss.py  markov_head.py  qwen3_5_target_capture.py  qwen3_target_capture.py
deepspec_mlx/optim/: __init__.py  muon.py  optimizer.py
deepspec_mlx/scripts/: eval_mlx.py  eval_ornith.py  overfit_canary.py  prepare_target_cache_mlx.py
deepspec_mlx/serve/: __init__.py  checkpoint.py  server.py
deepspec_mlx/spikes/: m1_target_kv_trim.py  m2_target_hidden_capture.py  m3_sdpa_dense_bias.py  m4_draft_cache_trim.py
deepspec_mlx/tests/: test_cache_reader_parity.py  test_cachefree_target.py  test_dspark_forward.py  test_muon_parity.py  test_precision.py  test_spec_decode.py
deepspec_mlx/trainer/: __init__.py  train_loop.py
scripts/: docker_run.sh  wslc_run.sh  wslc_stop.sh
scripts/data/: download_and_split.py  prepare_target_cache.py
scripts/eval/: eval.sh
scripts/ornith/: README.md  check_load.py  run_pipeline.sh
(+13 files in other folders)
